<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/profile_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile_details"
            android:textColor="#1B023B"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="349dp"
        android:layout_height="68dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/your_name"
        android:padding="13dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/black_profile"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintWidth_percent=".8"/>


    <EditText
        android:id="@+id/phone_number"
        android:layout_width="349dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/phone_number"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/phone_number"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintVertical_bias="0.20"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/e_mail"
        android:layout_width="349dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/e_mail"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/e_mail"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/location"
        android:layout_width="349dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/location"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/your_address"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintVertical_bias="0.3"/>
</androidx.constraintlayout.widget.ConstraintLayout>